@@ -19,19 +19,19 @@ public class Main {
         System.out.println(result);
         */
 
+
         List<Integer> numbers = new ArrayList<>();
         for (int i = 0; i < 100; i++) {
-            numbers.add((int) (Math.random() * 1000));
+            numbers.add((int) (Math.random() * 100 + 100));
         }
 
-        List<String> list = numbers.stream()
-                .filter((n) -> n % 2 == 0)
-                .map((integer) -> "Number: " + integer)
-                .filter((string) -> string.endsWith("0"))
-                .map((string) -> string + "!")
-                .collect(Collectors.toList());
+        List<String> result = numbers.stream()
+                .filter(integer -> integer % 2 == 0 && integer % 5 == 0)
+                .map(Math::sqrt)
+                .map(sqrt -> "Sqrt: " + sqrt)
+                .toList();
 
-        for (String s : list) {
+        for (String s : result) {
             System.out.println(s);
         }
     }
@@ -53,4 +53,6 @@ public class Main {
         }
         return result;
     }
+
+
 }
